5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1785_1595.log
== TEST (2019-05-30 10:03:40) 
-- CODE:
from numpy import*
v= array(eval(input("[]")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:05:04) 
-- CODE:
from numpy import*
v= array(eval(input("[:]")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:05:53) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:04) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:44) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:58) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
sum(v)
media= sum(v)/size(v)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:11:21) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
sum(v)
media= (sum(v)-min(v)/size(v))
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:13:01) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
a= sum(v)-min(v)
media= (a/size(v))
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:13) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
a= sum(v)-min(v)
media= (a/size(v)-min(v))
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:10) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
a= sum(v)-min(v)
b= size(v)-min(v)
media= a/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:16:12) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
a= sum(v)-min(v)
b= size(v)-min(v)
media= a/b
print(round(media,2))
-- EXECUTION TIME:
0.313412
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
3.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:17) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
a= sum(v)-min(v)
b= size(v)-min(v)
media= a/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:52) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= sum(v)/size(v)
print(round(media-min(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:19:46) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= sum(v)/size(v)
print(round(media-min(v),2))
-- EXECUTION TIME:
0.486022
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:17) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)/size(v))-min(v)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:41) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v)/size(v)-1)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:42) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))(/size(v)-1)
print(round(media,2))
-- ERROR:
File "XXXX", line 4
    media= (sum(v)-min(v))(/size(v)-1)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:22:42) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))(/size(v)-1)
print(round(media,2))
-- EXECUTION TIME:
0.118007
-- ERROR:
  File "/home/codebench/codes/1785/1595/main.py", line 4
    media= (sum(v)-min(v))(/size(v)-1)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:22:44) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))(/size(v)-1)
print(round(media,2))
-- EXECUTION TIME:
0.16831
-- ERROR:
  File "/home/codebench/codes/1785/1595/main.py", line 4
    media= (sum(v)-min(v))(/size(v)-1)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:45) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))(/size(v)-1)
print(round(media,2))
-- ERROR:
File "XXXX", line 4
    media= (sum(v)-min(v))(/size(v)-1)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:22:54) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))/(size(v)-1)
print(round(media,2))
-- EXECUTION TIME:
0.509337
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:54) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))/(size(v)-1)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:22:59) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))/(size(v)-1)
print(round(media,2))
-- EXECUTION TIME:
0.512053
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:58) 
-- CODE:
from numpy import*
v= array(eval(input("notas:")))
size(v)
media= (sum(v)-min(v))/(size(v)-1)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
